[package]
name = "rusty_raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
apache-avro = {path = "../avro/lang/rust/avro", features= ["derive"]}
serde = "1"
